--- a/testa.Rmd
+++ b/testa.Rmd
@@ -3,8 +3,7 @@ title: "Hotel reviews for git"
 author: "Lukas"
 date: "September 11, 2019"
 output: 
-  html_document:
-    keep_md: true
+  github_document
 ---
 ```{r setup, include=FALSE, warning = F}
 knitr::opts_chunk$set(echo = TRUE)
